# AzureDevOps-Repo-Backup

./: .env.example  .gitignore  README.md  pyproject.toml  pytest.ini
src/backup_azure_devops/: __main__.py  config.py  logger.py  models.py  protocols.py
src/backup_azure_devops/services/: azure_api.py  backup_service.py  git_executor.py  report_writer.py
tests/: conftest.py  test_azure_api.py  test_backup_service.py  test_config.py  test_git_executor.py  test_models.py  test_report_writer.py
